src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --accent: #f2f3f4;
  --background: #0c0c0c;
  --muted-accent: #bdc0ba;
  --muted-background: #434343;
}

* {
  box-sizing: border-box;
}

*::selection {
  background: var(--background);
  color: var(--accent);
}

input:focus {
  outline: none;
}

.layout {
  @apply min-h-[100vh] min-w-[100vw] py-16 lg:py-20 3xl:py-20 px-10;
}

.box {
  @apply p-4 rounded-lg lg:shadow-lg bg-accent text-background;
}

.button {
  @apply p-4 rounded-lg shadow-lg bg-accent text-background transition-all duration-300;
}

.button.invert-colors {
  @apply bg-background text-accent;
}

.fade-enter {
  opacity: 0;
  transform: scale(0.9);
}
.fade-enter-active {
  opacity: 1;
  transform: scale(1);
  transition: opacity 300ms, transform 300ms;
}
.fade-exit {
  opacity: 1;
  transform: scale(1);
}
.fade-exit-active {
  opacity: 0;
  transform: scale(0.9);
  transition: opacity 300ms, transform 300ms;
}

.transition-height {
  height: 0px;
  transition: height 0.5s;
  interpolate-size: allow-keywords;
  overflow: hidden;
}

.transition-height.open {
  height: auto !important;
}

.title {
  @apply text-2xl lg:text-3xl 3xl:text-4xl;
}

.subtitle {
  @apply text-lg lg:text-xl 3xl:text-2xl;
}

.card {
  @apply box flex flex-col relative px-4;
}

.card-section {
  @apply flex flex-col space-y-2 border-background border-solid border-[2px] p-2 rounded-xl text-base 2xl:text-lg mt-3;
}

.absolute-full {
  @apply absolute top-0 right-0 left-0 bottom-0;
}

/* Hide srollbar */
::-webkit-scrollbar {
  display: none;
}

.highlighted {
  --offset: 6px;
  position: relative;
  overflow: hidden;
}

.highlighted > * {
  position: relative;
  z-index: 10;
}

/* Conic gradient */
.highlighted::before {
  content: "";
  background: conic-gradient(
    transparent 270deg,
    var(--background),
    transparent
  );
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  aspect-ratio: 1;
  width: 100%;
  animation: rotate 3s linear infinite;
}

/* Overlay */
.highlighted::after {
  content: "";
  background: inherit;
  border-radius: inherit;
  position: absolute;
  inset: var(--offset);
  height: calc(100% - 2 * var(--offset));
  width: calc(100% - 2 * var(--offset));
}

.highlighted input {
  background: transparent;
  color: white;
  font-size: 1.5rem;
  position: absolute;
  inset: 0;
  z-index: 10;
  padding: 1.5rem;
}

@keyframes rotate {
  0% {
    transform: translate(-50%, -50%) scale(1.4) rotate(0turn);
  }

  90% {
    opacity: 1;
  }

  100% {
    transform: translate(-50%, -50%) scale(1.4) rotate(1turn);
    opacity: 0;
  }
}

/* Base style */
.click-shadow-animation {
  position: relative;
}

.click-shadow-animation::after {
  content: "";
  position: absolute;
  top: 22%;
  left: 0;
  right: 0;
  bottom: 0;
  background: radial-gradient(
    circle,
    rgba(0, 0, 0, 0) 0%,
    var(--accent),
    rgba(0, 0, 0, 0) 100%
  );
  padding: 25%;
  width: 100%;
  height: auto;
  aspect-ratio: 16/9;
  border-radius: 10%;
  border-collapse: separate;
  animation: dust-fade-out 0.75s ease forwards;
  z-index: -10;
}

/* Keyframe animation for fading and expanding */
@keyframes dust-fade-out {
  0% {
    transform: scale(1);
    opacity: 0;
  }

  10% {
    opacity: 1;
  }

  70% {
    transform: scale(1.5, 2.5);
    opacity: 0;
  }

  100% {
    transform: scale(1.5, 2.5);
    opacity: 0;
  }
}

/* Spinner */
.spinner {
  transform-origin: center;
  animation: spin 0.6s linear infinite;
}
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

